2005-12-07  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* xt.pc.in:
	Add configure option to set the build's app-default dir, and put
	the result in the xt.pc file for applications to use.

2005-12-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* man/Makefile.am:
	Change *man_SOURCES ==> *man_PRE to fix autotools warnings.

2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-12-02  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* src/Makefile.am:
	Add check and cflags for malloc(0) returning NULL.

2005-11-19  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* xt.pc.in:
	Update pkgconfig files to separate library build-time dependencies
	from application build-time dependencies.

2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.

2005-11-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update pkgcheck dependencies to work with separate build roots.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* src/Makefile.am:
	Use $(INSTALL) instead of $(install_sh_DATA) for creating
	directories.

2005-10-17  Adam Jackson  <ajax@freedesktop.org>

	* src/Makefile.am:
	Split the 'install -d' over multiple lines so certain lame versions
	of autotools don't flip out.

2005-10-17  Alan Coopersmith  <alan.coopersmith@sun.com>

	* src/Makefile.am:
	* configure.ac:
	Add --with-xfile-search-path=<path> and default setting to match
	monolith XFileSearchPathDefault in Imake (including extra directories
	used in Debian section of linux.cf.)
	
2005-10-11  Alan Coopersmith  <alan.coopersmith@sun.com>

	* man/Makefile.am: 
	* configure.ac:
	Set up cpp pre-processing of man pages