@@ -1,3 +1,11 @@
+2005-12-10  Kevin E. Martin  <kem-at-freedesktop-dot-org>
+
+	* configure.ac:
+	Add configure option to install makestrs and its manpage.
+
+	* util/Makefile.am:
+	Add makestrs man page.
+
 2005-12-07  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
